--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="/static/style.css">
-        <script src="/static/main.js"></script> 
+        <link rel="stylesheet" href="static/style.css">
+        <script src="static/main.js"></script> 
     </head>
     <body>
         <ul id="gallery">
@@ -11,7 +11,7 @@
                 <ul class="gallery-group">
                     {% for image in group[1] %}
                         <div>
-                            <img width="{{ image[1][0] * image_height/image[1][1] }}px" height="300px" class="lazy" data-src="/static/{{ image[0] }}">
+                            <img width="{{ image[1][0] * image_height/image[1][1] }}px" height="300px" class="lazy" data-src="static/{{ image[0] }}">
                         </div>
                     {% endfor %}
                 </ul>
